2005-08-23  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c: (cairo_font_face_reference),
	(cairo_scaled_font_reference): Remove assert statements that
	violate two intentional instances of ref_count == 0.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/text-pattern.c: (draw): Fix memory leak of pattern.

2005-08-23  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-win32-font.c (_cairo_win32_scaled_font_show_glyphs):
	Check for AlphaBlend() with GetProcAddress() to support older
	compilation environments like MSVC 6. (Also fixes this portion
	of the code to run on Win98 and Win95, but much of the rest
	of cairo-win32-* won't work in that environment)
	(#3926, Hans Breuer, Christian Biesinger, based on code 
	originally from Mozilla)

	* src/cairo-win32-private.h: Remove WINVER define, since it
	was there only for AlphaBlend().

2005-08-23  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c: Call _get_pattern_load_flags() 
	on the resolved pattern, not the input pattern.
	(Further fix from sunmoon1997)

2005-08-23  Carl Worth  <cworth@cworth.org>

	Reviewed by: otaylor
	Fixes bug #4198

	* src/cairo-font.c: (cairo_font_face_reference),
	(cairo_font_face_destroy), (cairo_scaled_font_reference),
	(cairo_scaled_font_destroy):
	* src/cairo-pattern.c: (cairo_pattern_reference),
	(cairo_pattern_destroy):
	* src/cairo-surface.c: (cairo_surface_reference),
	(cairo_surface_destroy):
	* src/cairo.c: (cairo_reference), (cairo_destroy):
	Detect (by assert and crash) if users attempt to twice destroy or
	re-reference a destroyed object. The condition for detecting this
 	case is a ref_count of 0.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* src/cairo.h:
	* src/cairoint.h: Move CAIRO_CONTENT_VALID and CAIRO_FORMAT_VALID
	from the public cairo.h to the private cairoint.h where they
	belong.

2005-08-23  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_cairo_ft_scaled_font_show_glyphs): 
	when creating the temporary mask, do glyph ADD mask, not 