@@ -1,3 +1,10 @@
+2005-08-23  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo-pattern.c (_cairo_pattern_calc_color_at_pixel):
+	Rip out all the code for doing anything other than linear
+	interpolation between color stops, instead of doing different
+	funky things based on pattern->filter. (#4184)
+
 2005-08-23  Carl Worth  <cworth@cworth.org>
 
 	* src/cairo-font.c: (cairo_font_face_reference),
